@@ -11,6 +11,7 @@ Establishing sessions from inside a container to another container is done using
 Do not use KillPsSession when running inside a container
 Issue #2518 support Onedrive URLs in Sign-BcContainerApp
 Issue #2540 add support for missing countries in mapping
+Issue #2534 add runSandboxAsOnPrem to New-BcImage (and transfer from New-BcContainer)
 
 3.0.10
 Issue #2457 Convert-BcAppsToRuntimePackages: allow to set showmycode, keepContainer, include sign app parameters
